--- a/404.html
+++ b/404.html
@@ -7,5 +7,8 @@ classes: no-sidebar wide
 <h1 class="text-center">ページが見つかりません</h1>
 <p class="text-center">
   お探しのページは移動または削除したかもしれません<br>
-  良かったら右上の <i class="fas fa-search"></i> から探してみてください<br>
+  良かったら右上の
+  <span class="visually-hidden">Toggle search</span>
+  <i class="fas fa-search" aria-hidden="true"></i>
+  から探してみてください<br>
 </p>
