Add header image

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 ---
 layout: home
 classes: wide
+header:
+  teaser: /assets/images/header-1200x315.jpg
+  overlay_image: /assets/images/header-1200x315.jpg
+  overlay_filter: 0.5
+  show_overlay_excerpt: false
 author_profile: true
 ---
