--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 ---
 layout: single
-classes: no-sidebar wide
+classes: no-sidebar wide text-center
+title: ページが見つかりません
 ---
 
-<h1 class="text-center">ページが見つかりません</h1>
-<p class="text-center">
+<p>
   お探しのページは移動または削除したかもしれません<br>
   良かったら右上の
   <span class="visually-hidden">Toggle search</span>
