--- a/404.html
+++ b/404.html
@@ -8,6 +8,6 @@ title: ページが見つかりません
   お探しのページは移動または削除したかもしれません<br>
   良かったら右上の
   <span class="visually-hidden">Toggle search</span>
-  <i class="fas fa-search" aria-hidden="true"></i>
+  <i aria-hidden="true" class="fas fa-search"></i>
   から探してみてください<br>
 </p>
