Show updated date (without 404 page)

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: single
-classes: no-sidebar wide text-center
+classes: wide text-center no-sidebar no-footer-meta
 title: ページが見つかりません
 ---
 
